--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
